Формитирование кода, исправление dto в сторону записи-структуры